# road_network_classification

./: .gitignore  LICENSE  README.md  constants.py  pyproject.toml  requirements.txt  requirements_dev.txt  test.ipynb
configs/: 00_global_config.json  01_1_area_of_interest_config_example.json  01_2_custom_road_network_area_of_interest_config_example.json  01_area_of_interest_config_example.json  01_credentials_example.json  02_credentials.json  02_credentials_example.json  berlin_prio.json  berlin_prio_vset.json  dresden.json  dresden_small.json  muenchen.json  neukoelln.json  osnabrueck.json  weseraue.json
other/: greedy_grouping.py  pano_functions.py  pano_tests.py  pano_to_persp.py  utils.py
src/: config.py  constants.py  main.py  pano_tests.py  pano_to_persp.py  pano_utils.py  pipeline.py  sample_to_sql.sql  snap_points_on_roadseg.sql  utils.py  weser_aue.py
src/modules/: AreaOfInterest.py  MapillaryInterface.py  Models.py  SurfaceDatabase.py
src/notebooks/: analyze_berlin.ipynb  analyze_img_metadata.ipynb  analyze_prediction_werseraue.ipynb  analyze_prediction_werseraue_run4.ipynb  analyze_weseraue.ipynb  postprocessing.ipynb  postprocessing_berlin.ipynb
src/other/: pano_tests.py  pano_to_persp.py  weser_aue.py
src/sql/: 02_intersect_img_ways.sql  03_classification_res.sql  04_label_segment.sql  05_roadtypes.sql  add_geom_column.sql  add_model_pred.sql  aggregate_on_roads.sql  aggregation_alg.sql  aggregation_alg1.sql  aggregation_alg2.sql  aggregation_alg3.sql  imgs_to_db.sql  (+27 more)
tests/: test_area_of_interest.py  test_mapillary_interface.py  test_models.py
(+1 files in other folders)
